--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h1>ENSIKLOPEDIA SAMUDRA PASAI</h1>
     </div><div class="navigation">
   <nav class="nav justify-content-center">
-    <a class="nav-link" href="#">Beranda</a>
+    <a class="nav-link" href="https://greyyninja.github.io/beranda/">Beranda</a>
     <a class="nav-link" href="#">Tentang Samudra Pasai</a>
     <a class="nav-link" href="#">Artefak</a>
     <a class="nav-link" href="#">Identitas dan pengalaman</a>
