--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     </div><div class="navigation">
   <nav class="nav justify-content-center">
     <a class="nav-link" href="https://greyyninja.github.io/beranda/">Beranda</a>
-    <a class="nav-link" href="https://greyyninja.github.io/Sejarah-Samudra-Pasai/#">Tentang Samudra Pasai</a>
-    <a class="nav-link" href="#">Artefak</a>
-    <a class="nav-link" href="#">Identitas dan pengalaman</a>
+    <a class="nav-link" href="tsuki_ga.html">Tentang Samudra Pasai</a>
+    <a class="nav-link" href="mahoraga.html">Artefak</a>
+    <a class="nav-link" href="crotnekox.html">Identitas dan pengalaman</a>
   </nav>
 </div>
 
