--- a/tsuki_ga.html
+++ b/tsuki_ga.html
@@ -64,10 +64,10 @@
     </div>
 
     <div class="nav my-3 justify-content-center">
-      <a href="#">Beranda</a>
-      <a href="#">tentang Samudra Pasai</a>
-      <a href="#">Artefak</a>
-      <a href="#">Identitas dan pengalaman</a>
+      <a href="index.html">Beranda</a>
+      <a href="tsuki_ga.html">tentang Samudra Pasai</a>
+      <a href="mahoraga.html">Artefak</a>
+      <a href="crotnekox.html">Identitas dan pengalaman</a>
 
     </div>
 
