--- a/mahoraga.html
+++ b/mahoraga.html
@@ -15,10 +15,10 @@
   </header>
 
   <nav class="bg-secondary text-white text-center py-2">
-    <a href="https://example.com" class="text-white mx-3 text-decoration-none">Beranda</a>
-    <a href="https://example.com" class="text-white mx-3 text-decoration-none">Tentang Samudra Pasai</a>
-    <a href="https://example.com" class="text-white mx-3 text-decoration-none">Artefak</a>
-    <a href="https://example.com" class="text-white mx-3 text-decoration-none">Identitas dan Pengalaman</a>
+    <a href="index.html" class="text-white mx-3 text-decoration-none">Beranda</a>
+    <a href="tsuki_ga.html" class="text-white mx-3 text-decoration-none">Tentang Samudra Pasai</a>
+    <a href="mahoraga.html" class="text-white mx-3 text-decoration-none">Artefak</a>
+    <a href="crotnekox.html" class="text-white mx-3 text-decoration-none">Identitas dan Pengalaman</a>
   </nav>
 
   <div class="container my-5">
