--- a/crotnekox.html
+++ b/crotnekox.html
@@ -47,10 +47,10 @@
 
   <nav class="navbar navbar-expand-lg">
     <div class="container justify-content-center">
-      <a class="nav-link" href="#">Beranda</a>
-      <a class="nav-link" href="#">Tentang Samudra Pasai</a>
-      <a class="nav-link" href="#">Artefak</a>
-      <a class="nav-link" href="#">Identitas dan Pengalaman</a>
+      <a class="nav-link" href="index.html">Beranda</a>
+      <a class="nav-link" href="tsuki_ga.html">Tentang Samudra Pasai</a>
+      <a class="nav-link" href="mahoraga.html">Artefak</a>
+      <a class="nav-link" href="crotnekox.html">Identitas dan Pengalaman</a>
     </div>
   </nav>
 
