--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h1>ENSIKLOPEDIA SAMUDRA PASAI</h1>
     </div><div class="navigation">
   <nav class="nav justify-content-center">
-    <a class="nav-link" href="https://greyyninja.github.io/beranda/">Beranda</a>
+    <a class="nav-link" href="index.html">Beranda</a>
     <a class="nav-link" href="tsuki_ga.html">Tentang Samudra Pasai</a>
     <a class="nav-link" href="mahoraga.html">Artefak</a>
     <a class="nav-link" href="crotnekox.html">Identitas dan pengalaman</a>
